# axum-mcp-layer

./: AGENTS.md  Cargo.toml  README.md
axum-mcp/: Cargo.toml
axum-mcp-macros/: Cargo.toml
axum-mcp-macros/src/: lib.rs
axum-mcp/src/: http.rs  layer.rs  lib.rs  prelude.rs  registry.rs  schema.rs  security.rs  stdio.rs  tool.rs
axum-mcp/tests/: http_mvp.rs  http_sse_auth.rs  security_and_versions.rs  stdio_roundtrip.rs
docs/: goals.md
docs/plans/: README.md  plan-http-mvp.md  plan-macro-first.md  plan-stdio-first.md
examples/demo/: Cargo.toml
examples/demo-stdio/: Cargo.toml
examples/demo-stdio/src/: main.rs
examples/demo/src/: main.rs
