[package]
name = "axum-mcp"
version = "0.1.0"
edition = "2024"
description = "Axum Layer + Tool registry to expose MCP over HTTP (MVP)"
license = "MIT OR Apache-2.0"

[features]
default = ["http"]
http = []
stdio = ["dep:mcp-protocol-sdk"]
jsonschema = ["dep:jsonschema"]
trace = ["dep:tracing"]

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1", features = ["derive"] }
thiserror = "2"
linkme = "0.3.33"
async-trait = "0.1"
futures = "0.3"
anyhow = "1"
tracing = { version = "0.1", optional = true }
mcp-protocol-sdk = { version = "0.5.1", default-features = false, features = ["stdio"], optional = true }

[dependencies.jsonschema]
version = "0.18"
optional = true

[dev-dependencies]
serde_json = "1.0"
axum = { version = "0.8.4", features = ["macros", "json"] }
