[package]
name = "axum-mcp-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
axum-mcp = { path = "../../axum-mcp", features = ["http"] }
axum-mcp-macros = { path = "../../axum-mcp-macros" }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
async-trait = "0.1"
linkme = "0.3.33"
